[package]
name = "libnss-wiregarden"
version = "0.1.2"
authors = ["Wiregarden Ops <ops@wiregarden.io>"]
edition = "2018"
description = "Wiregarden NSS host module"
readme = "README.md"
homepage = "https://wiregarden.io/"
license-file = "LICENSE"
repository = "https://github.com/wiregarden-io/nss-wiregarden"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
lazy_static = "1.4"
libnss = "0.4"
paste = "0.1"
rusqlite = "0.24"
debug_print = "1.0"

[lib]
name = "nss_wiregarden"
crate-type = ["cdylib"]

[package.metadata.deb]
depends = "base-files, libc6, libsqlite3-0"
priority = "optional"
extended-description = "nss-wiregarden is a libnss host plugin that resolves wiregarden peers by device and network name."
assets = [
	["target/release/libnss_wiregarden.so", "lib/libnss_wiregarden.so.2", "644"],
	["README.md", "usr/share/doc/libnss-wiregarden/README", "644"],
]
